Add Level 4 & Level 5 Security

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
             </div>
             <button type="submit" class="btn btn-dark">Login</button>
           </form>
-          <h6 style="color:brown"><%= locals.message %></h6>
+          <h6 style="color:brown"><%= locals.messages[0] %></h6>
         </div>
       </div>
     </div>
