--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,7 +19,7 @@
             </div>
             <button type="submit" class="btn btn-dark">Register</button>
           </form>
-
+          <h6 style="color:brown"><%= locals.message %></h6>
         </div>
       </div>
     </div>
